--- a/src/views/admin.ejs
+++ b/src/views/admin.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -18,4 +18,4 @@
 	<img src="/images/node.jpg" width="60%">
 </body>
 </html>
-<h4></h4>
+>
