--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -1,4 +1,4 @@
-<header>
+<!--<header>
     <nav class="navbar navbar-expand-lg bg-light">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">Navbar</a>
@@ -28,4 +28,4 @@
           </div>
         </div>
       </nav>
-</header>
+</header>-->
